Fixed the alignment of the Search input box added by the Bartender Filter Items button

--- a/src/scss/Plugins/Core/fileExplorer.scss
+++ b/src/scss/Plugins/Core/fileExplorer.scss
@@ -23,6 +23,11 @@
 	margin-left: unset;
 }
 
+.workspace-leaf-content[data-type="file-explorer"] .search-input-container {
+	margin: unset;
+	padding: 0px 0px 10px 0px;
+}
+
 // /* Fixes the bounce caused by a random div in the nav-folder-children */
 // .workspace-leaf-content[data-type="file-explorer"] .nav-folder-children > div:not(.nav-folder):not(.nav-file) {
 // 	display: none;
